; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_xsysace.c_ace_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_xsysace.c_ace_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gendisk = type { %struct.ace_device* }
%struct.ace_device = type { i64, i32, i32 }

@.str = private unnamed_addr constant [24 x i8] c"ace_release() users=%i\0A\00", align 1
@ACE_CTRL = common dso_local global i32 0, align 4
@ACE_CTRL_LOCKREQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gendisk*, i32)* @ace_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ace_release(%struct.gendisk* %0, i32 %1) #0 {
  %3 = alloca %struct.gendisk*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ace_device*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.gendisk* %0, %struct.gendisk** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.gendisk*, %struct.gendisk** %3, align 8
  %9 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %8, i32 0, i32 0
  %10 = load %struct.ace_device*, %struct.ace_device** %9, align 8
  store %struct.ace_device* %10, %struct.ace_device** %5, align 8
  %11 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %12 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %15 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = sub nsw i64 %16, 1
  %18 = call i32 @dev_dbg(i32 %13, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i64 %17)
  %19 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %20 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %19, i32 0, i32 1
  %21 = load i64, i64* %6, align 8
  %22 = call i32 @spin_lock_irqsave(i32* %20, i64 %21)
  %23 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %24 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = add nsw i64 %25, -1
  store i64 %26, i64* %24, align 8
  %27 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %28 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp eq i64 %29, 0
  br i1 %30, label %31, label %42

31:                                               ; preds = %2
  %32 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %33 = load i32, i32* @ACE_CTRL, align 4
  %34 = call i32 @ace_in(%struct.ace_device* %32, i32 %33)
  store i32 %34, i32* %7, align 4
  %35 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %36 = load i32, i32* @ACE_CTRL, align 4
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* @ACE_CTRL_LOCKREQ, align 4
  %39 = xor i32 %38, -1
  %40 = and i32 %37, %39
  %41 = call i32 @ace_out(%struct.ace_device* %35, i32 %36, i32 %40)
  br label %42

42:                                               ; preds = %31, %2
  %43 = load %struct.ace_device*, %struct.ace_device** %5, align 8
  %44 = getelementptr inbounds %struct.ace_device, %struct.ace_device* %43, i32 0, i32 1
  %45 = load i64, i64* %6, align 8
  %46 = call i32 @spin_unlock_irqrestore(i32* %44, i64 %45)
  ret i32 0
}

declare dso_local i32 @dev_dbg(i32, i8*, i64) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @ace_in(%struct.ace_device*, i32) #1

declare dso_local i32 @ace_out(%struct.ace_device*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
